# AUTON

./: .dockerignore  .gitignore  Dockerfile  IMPLEMENTATION_COMPLETE.md  LICENSE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PHASES.md  README.md  docker-compose.yml
SLM/: README.md  requirements.txt
SLM/configs/: large_500M.yaml  small_50M.yaml  (+2 more)
agent/: .gitignore  pyproject.toml  test_phase4.py  test_phase5.py  test_phase6.py
agent/config/: auton.toml.example
agent/kernel_spec/: architecture.md
agent/kernel_spec/arch/: aarch64.md  hal.md  riscv64.md  x86_64.md
agent/kernel_spec/subsystems/: boot.md  dev.md  drivers.md  fs.md  hypervisor.md  ipc.md  llm_runtime.md  mm.md  net.md  nl_syscall.md  pkg.md  sched.md  slm.md  sys.md
agent/kernel_spec/tests/: acceptance_tests.py
agent/orchestrator/: __init__.py  __main__.py  arch_registry.py  cli.py
agent/orchestrator/agents/: __init__.py  agent_tools.py  architect_agent.py  base_agent.py  data_scientist_agent.py  developer_agent.py  integrator_agent.py  manager_agent.py  model_architect_agent.py  reviewer_agent.py  tester_agent.py  training_agent.py
agent/orchestrator/comms/: diff_protocol.py  git_workspace.py  message_bus.py
agent/orchestrator/core/: engine.py  scheduler.py  state.py  task_graph.py
agent/orchestrator/llm/: client.py  prompts.py  response.py  tools.py
agent/orchestrator/validation/: __init__.py  build_validator.py  composition_validator.py  test_validator.py
agent/slm_spec/: architecture.md  data_preparation.md  evaluation.md  export.md  integration.md  overview.md  quantization.md  training.md
agent/tests/: README.md  STRUCTURE_COMPLETE.md  conftest.py
agent/tests/fixtures/: __init__.py  mock_git_workspace.py  mock_llm_client.py  sample_configs.py  sample_tasks.py
agent/tests/integration/: __init__.py  test_agent_collaboration.py  test_dual_workflow.py  test_engine_validation_wiring.py  test_kernel_workflow.py  test_slm_workflow.py
agent/tests/unit/: __init__.py  test_acceptance_runner.py  test_arch_registry.py  test_cli.py
agent/tests/unit/agents/: test_agent_tools.py  test_architect_agent.py  test_base_agent.py  test_data_scientist_agent.py  test_developer_agent.py  test_integrator_agent.py  test_manager_agent.py  test_model_architect_agent.py  test_reviewer_agent.py  test_tester_agent.py  test_training_agent.py
agent/tests/unit/comms/: __init__.py  test_diff_protocol.py  test_git_workspace.py  test_message_bus.py
agent/tests/unit/llm/: __init__.py  test_client.py  test_prompts.py  test_response.py  test_tools.py
agent/tests/unit/orchestrator/: __init__.py  test_engine.py  test_scheduler.py  test_state.py  test_task_graph.py
agent/tests/unit/validation/: __init__.py  test_build_validator.py  test_composition_validator.py  test_test_validator.py
agent/tools/: Cargo.toml
agent/tools/diff-validator/: Cargo.toml
agent/tools/diff-validator/src/: lib.rs  main.rs
agent/tools/diff-validator/tests/: test_diff_parsing.rs  test_validation_rules.rs
agent/tools/kernel-builder/: Cargo.toml
agent/tools/kernel-builder/src/: lib.rs  main.rs
agent/tools/kernel-builder/tests/: test_build_commands.rs  test_cross_compile.rs  test_toolchain_detection.rs
agent/tools/test-runner/: Cargo.toml
agent/tools/test-runner/src/: lib.rs  main.rs
agent/tools/test-runner/tests/: test_qemu_launch.rs  test_serial_capture.rs  test_timeout_handling.rs
controlplane/: INSTALL.md  README.md  pyproject.toml
controlplane/src/controlplane/: __init__.py
controlplane/src/controlplane/backends/: __init__.py
controlplane/src/controlplane/backends/desktop/: __init__.py  adapters_linux.py  adapters_macos.py  adapters_windows.py  launcher.py  plugin.py
controlplane/src/controlplane/backends/docker/: __init__.py  client.py  plugin.py
controlplane/src/controlplane/backends/kubernetes/: __init__.py  client.py  plugin.py
controlplane/src/controlplane/backends/os/: README.md  __init__.py  builder.py  plugin.py  profiles.py
controlplane/src/controlplane/backends/os/images/android/: compose.yml
controlplane/src/controlplane/backends/os/images/ios-guidance/: GUIDANCE.md
controlplane/src/controlplane/backends/os/images/macos-dockur/: compose.yml
controlplane/src/controlplane/backends/os/images/windows-dockur/: compose.yml
controlplane/src/controlplane/backends/os/images/windows-wine/: Dockerfile
controlplane/src/controlplane/backends/server/: __init__.py  plugin.py  supervisor.py
controlplane/src/controlplane/backends/status/: __init__.py  aggregator.py  plugin.py
controlplane/src/controlplane/core/: __init__.py  chat.py  contract.py  help.py  registry.py  router.py  session.py  session_sync.py
controlplane/src/controlplane/intent/: __init__.py  resolver.py
controlplane/src/controlplane/operator/: README.md  __init__.py  approval.py  brain.py  cli.py  planner.py  runner.py  tools.py
controlplane/src/controlplane/surfaces/: __init__.py
controlplane/src/controlplane/surfaces/desktop/: __init__.py  shell.py
controlplane/src/controlplane/surfaces/terminal/: __init__.py  repl.py
controlplane/src/controlplane/surfaces/ui/: __init__.py  app.py
controlplane/src/controlplane/surfaces/ui/static/: app.js  index.html  style.css
controlplane/tests/: test_core.py  test_desktop.py  test_desktop_surface.py  test_docker.py  test_help.py  test_intent.py  test_kubernetes.py  test_operator.py  test_os.py  test_server.py  test_session_continuity.py  test_status.py  test_terminal.py  test_ui.py
scripts/: auton-boot.sh  build-iso.sh  run-acceptance.sh
(+91 files in other folders)
