[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auton"
version = "0.1.0"
description = "Agent orchestration framework that autonomously builds a natural language LLM agent-based hypervisor kernel"
readme = "../README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "litellm>=1.40.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
auton = "orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
