[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auton"
version = "0.1.0"
description = "Agent orchestration framework that autonomously builds a natural language LLM agent-based hypervisor kernel"
readme = "../README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    # Existing orchestration dependencies
    "litellm>=1.40.0",
    "gitpython>=3.1.40",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "click>=8.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    # SLM training dependencies
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.12.0",
    "tokenizers>=0.13.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.40.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "tensorboard>=2.13.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "sentencepiece>=0.1.99",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.2.0",
    "ruff>=0.1.0",
]

[project.scripts]
auton = "orchestrator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["orchestrator"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
