[workspace]
resolver = "2"
members = [
    "kernel-builder",
    "diff-validator",
    "test-runner",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
which = "7"
tracing = "0.1"
tracing-subscriber = "0.3"
