[package]
name = "diff-validator"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Static analysis and validation of agent-proposed C code diffs"

[[bin]]
name = "diff-validator"
path = "src/main.rs"

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
