[package]
name = "kernel-builder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cross-compilation and build orchestration for AUTON kernel"

[[bin]]
name = "kernel-builder"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
which.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
