[package]
name = "test-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "QEMU-based test runner for AUTON kernel"

[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
which.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
